@@ -276,13 +276,11 @@ if (locale == "enGB" or locale == "enUS") then
 	L["The Countess 1"]															= "House Darkvein"
 	L["The Countess 2"]															= "<Deliver Prince Renathal's invitation.>"
 	L["The Curator 1"]															= "What happened to the Medallion of Avarice?"
+	L["The Accuser 1"]															= "I'm ready. Begin the ritual."
 	L["Guard Captain Elizabeta 1"]												= "The Curator sent me. I'm looking for Watcher Emil."
-	L["Cobwobble 1"]															= "What are you all doing?"
-	L["Cobwobble 2"]															= "Where does the Taskmaster keep the sinstones?"
-	L["Slobwobble 1"]															= "What are you all doing?"
-	L["Slobwobble 2"]															= "Where does the Taskmaster keep the sinstones?"
-	L["Dobwobble 1"]															= "What are you all doing?"
-	L["Dobwobble 2"]															= "Why are the ones with scribbles interesting?"
+	L["Where does the Taskmaster keep the sinstones?"]							= "Where does the Taskmaster keep the sinstones?"
+	L["What are you all doing?"]												= "What are you all doing?"
+	L["Why are the ones with scribbles interesting?"]							= "Why are the ones with scribbles interesting?"
 	L["Courier Araak 1"]														= "Dimwiddle sent me."
 	L["Courier Araak 2"]														= "We are ready. Please tell the Taskmaster the Maw Walker is here."
 	L["Avowed Ritualist 1"]														= "I have a soul for you."
